--- a/frontend/index.html
+++ b/frontend/index.html
@@ -671,6 +671,6 @@
         </div>
     </div>
 
-    <script src="/frontend/app.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
