修复行为识别器初始化问题并完善API测试功能

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -128,6 +129,81 @@
             border-radius: 15px;
         }
 
+        .detection-type-selector {
+            margin-bottom: 2rem;
+            padding: 1.5rem;
+            background: linear-gradient(45deg, #fff8f0, #f0f8ff);
+            border-radius: 15px;
+            border: 2px solid #e8ecff;
+        }
+
+        .detection-options {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 1rem;
+            justify-items: center;
+            margin-bottom: 1rem;
+        }
+
+        .checkbox-option {
+            display: flex;
+            align-items: center;
+            padding: 0.75rem 1rem;
+            background: white;
+            border: 2px solid #e9ecef;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .checkbox-option:hover {
+            border-color: #667eea;
+            background: #f0f8ff;
+        }
+
+        .checkbox-option input[type="checkbox"] {
+            margin-right: 0.5rem;
+            transform: scale(1.2);
+            accent-color: #667eea;
+        }
+
+        .checkbox-option input[type="checkbox"]:checked+.checkbox-label {
+            color: #667eea;
+            font-weight: 600;
+        }
+
+        .checkbox-label {
+            font-size: 0.9rem;
+            color: #495057;
+            transition: color 0.3s ease;
+        }
+
+        .select-all-container {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+            margin-top: 1rem;
+        }
+
+        .btn-secondary {
+            background: rgba(102, 126, 234, 0.1);
+            color: #667eea;
+            border: 1px solid #667eea;
+            padding: 0.5rem 1rem;
+            border-radius: 20px;
+            font-size: 0.85rem;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            min-width: 80px;
+        }
+
+        .btn-secondary:hover {
+            background: #667eea;
+            color: white;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);
+        }
+
         .radio-option {
             display: flex;
             align-items: center;
@@ -149,7 +225,7 @@
             accent-color: #667eea;
         }
 
-        .radio-option input[type="radio"]:checked + .radio-label {
+        .radio-option input[type="radio"]:checked+.radio-label {
             color: #667eea;
             font-weight: 600;
         }
@@ -243,7 +319,7 @@
             color: white;
             font-size: 18px;
             font-weight: 600;
-            text-shadow: 0 2px 4px rgba(0,0,0,0.3);
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         .image-controls {
@@ -267,7 +343,7 @@
         .image-controls .btn-secondary:hover {
             background: rgba(255, 255, 255, 0.3);
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
         }
 
         .image-wrapper {
@@ -275,7 +351,7 @@
             background: white;
             border-radius: 12px;
             padding: 15px;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         }
 
         .result-image.enhanced-annotation {
@@ -288,7 +364,7 @@
 
         .result-image.enhanced-annotation:hover {
             transform: scale(1.02);
-            box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
         }
 
         .result-image.fullscreen {
@@ -302,7 +378,7 @@
             background: white;
             padding: 20px;
             border-radius: 12px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
         }
 
         .image-overlay {
@@ -333,7 +409,7 @@
             width: 12px;
             height: 12px;
             border-radius: 2px;
-            border: 1px solid rgba(255,255,255,0.3);
+            border: 1px solid rgba(255, 255, 255, 0.3);
         }
 
         .legend-color.compliant {
@@ -357,6 +433,7 @@
                 transform: translateX(100%);
                 opacity: 0;
             }
+
             to {
                 transform: translateX(0);
                 opacity: 1;
@@ -368,6 +445,7 @@
                 transform: translateX(0);
                 opacity: 1;
             }
+
             to {
                 transform: translateX(100%);
                 opacity: 0;
@@ -567,8 +645,13 @@
         }
 
         @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
         }
 
         .controls {
@@ -631,7 +714,7 @@
             margin: 0;
             font-size: 18px;
             font-weight: 600;
-            text-shadow: 0 2px 4px rgba(0,0,0,0.3);
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         .download-info {
@@ -656,7 +739,7 @@
         .download-btn:hover {
             background: rgba(255, 255, 255, 0.3);
             transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
         }
 
         @media (max-width: 768px) {
@@ -675,6 +758,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="header">
         <h1>🤖 人体行为检测系统</h1>
@@ -696,6 +780,36 @@
                     <input type="radio" name="fileType" value="video">
                     <span class="radio-label">🎬 视频检测</span>
                 </label>
+            </div>
+
+            <!-- 综合检测说明 -->
+            <div class="detection-info-section">
+                <h3 style="text-align: center; margin-bottom: 1rem; color: #333; font-size: 1.1rem;">🔍 综合检测功能</h3>
+                <div class="detection-features"
+                    style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 0.5rem; margin-bottom: 1rem; text-align: center;">
+                    <div class="feature-item"
+                        style="padding: 0.5rem; background: #f8f9fa; border-radius: 8px; border: 1px solid #e9ecef;">
+                        <span style="font-size: 1.2rem;">👥</span>
+                        <div style="font-size: 0.85rem; color: #666;">人体检测</div>
+                    </div>
+                    <div class="feature-item"
+                        style="padding: 0.5rem; background: #f8f9fa; border-radius: 8px; border: 1px solid #e9ecef;">
+                        <span style="font-size: 1.2rem;">🧢</span>
+                        <div style="font-size: 0.85rem; color: #666;">发网检测</div>
+                    </div>
+                    <div class="feature-item"
+                        style="padding: 0.5rem; background: #f8f9fa; border-radius: 8px; border: 1px solid #e9ecef;">
+                        <span style="font-size: 1.2rem;">🧼</span>
+                        <div style="font-size: 0.85rem; color: #666;">洗手检测</div>
+                    </div>
+                    <div class="feature-item"
+                        style="padding: 0.5rem; background: #f8f9fa; border-radius: 8px; border: 1px solid #e9ecef;">
+                        <span style="font-size: 1.2rem;">🧴</span>
+                        <div style="font-size: 0.85rem; color: #666;">消毒检测</div>
+                    </div>
+                </div>
+                <p style="text-align: center; color: #666; font-size: 0.9rem; margin: 0;">一次检测，全面分析 -
+                    自动识别人体、发网佩戴、洗手和消毒行为</p>
             </div>
 
             <div class="upload-area" id="uploadArea">
@@ -763,4 +877,5 @@
 
     <script src="/frontend/app.js"></script>
 </body>
+
 </html>
